[BugzId:4469] no more "PDF VERSION" pdf link in the main Principle tabs main content. also remove # when jumping from dashboard to principle tabs

--- a/sites/all/themes/care/css/styles.css
+++ b/sites/all/themes/care/css/styles.css
@@ -2771,13 +2771,13 @@ body.dashboard .print_pdf {
 body.dashboard-main .print_pdf  {
   display: none;
 }
-body.dashboard .print_pdf a:link,
-body.dashboard .print_pdf a:visited {
+body.dashboard .print_pdf a {
+	display: none; /*
   background: url(../images/icon_pdf.png) no-repeat;
   display: inline-block;
   padding: 0 0 0 20px;
   font-size: 11px;
-  font-weight: normal;
+  font-weight: normal; */
 }
 
 .fcol { float: left; width: 419px; margin-right: 30px; font: 13px/16px Arial, Helvetica, sans-serif }
